# BrainFuckLite

./: .gitignore
BrainFuckLite/: BFLConfig.txt  BrainFuckLite.cpp  BrainFuckLite.h  CMakeLists.txt
BrainFuckLite/Lexer/: Lexer.cpp  Lexer.h  TokenSt.h  TokenType.h
BrainFuckLite/Parser/: Parser.cpp  Parser.h
